Updated to latest API which enables to obtain the reading of the stop.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <table>
     <thead><tr><td colspan="2">項目名</td><td>データ</td></tr></thead>
     <tbody><tr><td colspan="2">停留所名</td><td data-bind="text: basic_info.idname.name"></td></tr>
+    <tbody><tr><td colspan="2">停留所読み</td><td data-bind="text: basic_info.idname.yomi"></td></tr>
     <tr><td colspan="2">ID</td><td data-bind="text: basic_info.idname.id"></td></tr>
     <tr><td rowspan="3">系統数</td><td>平日</td><td data-bind="text: lines.weekday.length"></td></tr>
     <tr><td>土曜</td><td data-bind="text: lines.saturday.length"></td></tr>
