--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <input class="form-control" data-bind="value: stationName">
 </div>
 </form>
-<table data-bind="visible: stops().length > 0">
+<table data-bind="visible: stops().length > 0" class="table">
 <thead><tr>
         <th>停留所名</th><th>ID</th>
         </tr></thead>
@@ -47,10 +47,10 @@
     </div>
 </form>
 <div data-bind="visible: stopInfo, with:stopInfo">
-    <table>
+    <table class="table">
     <thead><tr><td colspan="2">項目名</td><td>データ</td></tr></thead>
     <tbody><tr><td colspan="2">停留所名</td><td data-bind="text: basic_info.idname.name"></td></tr>
-    <tbody><tr><td colspan="2">停留所読み</td><td data-bind="text: basic_info.idname.yomi"></td></tr>
+    <tr><td colspan="2">停留所読み</td><td data-bind="text: basic_info.idname.yomi"></td></tr>
     <tr><td colspan="2">ID</td><td data-bind="text: basic_info.idname.id"></td></tr>
     <tr><td rowspan="3">系統数</td><td>平日</td><td data-bind="text: lines.weekday.length"></td></tr>
     <tr><td>土曜</td><td data-bind="text: lines.saturday.length"></td></tr>
@@ -76,12 +76,15 @@
     </div>
 </form>
 <div data-bind="visible: services">
-    <table>
+    <table class="table">
     <thead><tr><td>項目名</td><td>データ</td></tr></thead>
     <tbody><tr><td>系統名</td><td data-bind="text:selectedLine() && selectedLine().name"></td></tr>
-    <tr><td>ID</td><td data-bind="text:selectedLine() && selectedLine().id"></td></tr>
+    <tr><td>系統番号</td><td data-bind="text:selectedLine() && selectedLine().number"></td></tr>
+    <tr><td>系統ID</td><td data-bind="text:selectedLine() && selectedLine().id"></td></tr>
     <tr><td>運行日</td><td data-bind="text: selectedDay().name"></td></tr>
-    <tr><td>発時刻</td><td><ul data-bind="foreach: services"><li data-bind="text: dept"></li></ul></td></tr>
+    <tr><td>発時刻</td><td><table class="table">
+    <thead><tr><td>時刻</td><td>便ID</td></tr></thead>
+    <tbody data-bind="foreach: services"><tr><td data-bind="text:dept">系統名</td><td data-bind="text:bus_id"></td></tr></tbody></table></td></tr>
     </tbody>
     </table>
 </div>
