--- a/index.html
+++ b/index.html
@@ -18,95 +18,175 @@
 </head>
 <body>
 <div class="container">
-<div>
-<h3>停留所の検索</h3>
-  <div class="form-group">
-  <label>停留所名</label>
-<input class="form-control" data-bind="value: stationName">
-</div>
-<table data-bind="visible: stops().length > 0" class="table">
-<thead><tr>
-        <th>停留所名</th><th>ID</th>
-        </tr></thead>
-        <tbody data-bind="foreach: stops">
-        	<tr>
-            <td data-bind="text: name"></td>
-            <td data-bind="text: id" ></td>
-            </tr>
-        </tbody>
-</table>
-</div>
-<div data-bind="visible: stops().length > 0">
-<h3>停留所情報の表示</h3>
-	<div class="form-group">
-    <label>停留所を選択</label>
-    <select class="form-control" data-bind="options: stops, optionsText: 'name', value:selectedStop"></select>
+  <div>
+    <h3>停留所の検索</h3>
+    <div class="form-group">
+      <label>停留所名</label>
+      <input class="form-control" data-bind="value: stationName">
     </div>
-<div data-bind="visible: stopInfo, with:stopInfo">
-    <table class="table">
-    <thead><tr><td colspan="2">項目名</td><td>データ</td></tr></thead>
-    <tbody><tr><td colspan="2">停留所名</td><td data-bind="text: basic_info.idname.name"></td></tr>
-    <tr><td colspan="2">停留所読み</td><td data-bind="text: basic_info.idname.yomi"></td></tr>
-    <tr><td colspan="2">ID</td><td data-bind="text: basic_info.idname.id"></td></tr>
-    <tr><td rowspan="3">系統数</td><td>平日</td><td data-bind="text: lines.weekday.length"></td></tr>
-    <tr><td>土曜</td><td data-bind="text: lines.saturday.length"></td></tr>
-    <tr><td>休日</td><td data-bind="text: lines.holiday.length"></td></tr>
-    <tr><td rowspan="2">座標</td><td>緯度</td><td data-bind="text: basic_info.coord.lat"></td></tr>
-    <tr><td>経度</td><td data-bind="text: basic_info.coord.lon"></td></tr>
-    </tbody>
+    <table data-bind="visible: stops().length > 0" class="table">
+      <thead>
+        <tr>
+          <th>停留所名</th>
+          <th>ID</th>
+        </tr>
+      </thead>
+      <tbody data-bind="foreach: stops">
+        <tr>
+          <td data-bind="text: name"></td>
+          <td data-bind="text: id" ></td>
+        </tr>
+      </tbody>
     </table>
-</div>
-</div>
-<div data-bind="visible: selectedStop">
-<h3>系統情報の表示</h3>
-	<div class="form-group">
-    <label>曜日を選択</label>
-    <select class="form-control" data-bind="options: dayType, optionsText: 'name', value:selectedDay"></select>
+  </div>
+  <div data-bind="visible: stops().length > 0">
+    <h3>停留所情報の表示</h3>
+    <div class="form-group">
+      <label>停留所を選択</label>
+      <select class="form-control" data-bind="options: stops, optionsText: 'name', value:selectedStop">
+      </select>
+    </div>
+    <div data-bind="visible: stopInfo, with:stopInfo">
+      <table class="table">
+        <thead>
+          <tr>
+            <td colspan="2">項目名</td>
+            <td>データ</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="2">停留所名</td>
+            <td data-bind="text: basic_info.idname.name"></td>
+          </tr>
+          <tr>
+            <td colspan="2">停留所読み</td>
+            <td data-bind="text: basic_info.idname.yomi"></td>
+          </tr>
+          <tr>
+            <td colspan="2">ID</td>
+            <td data-bind="text: basic_info.idname.id"></td>
+          </tr>
+          <tr>
+            <td rowspan="3">系統数</td>
+            <td>平日</td>
+            <td data-bind="text: lines.weekday.length"></td>
+          </tr>
+          <tr>
+            <td>土曜</td>
+            <td data-bind="text: lines.saturday.length"></td>
+          </tr>
+          <tr>
+            <td>休日</td>
+            <td data-bind="text: lines.holiday.length"></td>
+          </tr>
+          <tr>
+            <td rowspan="2">座標</td>
+            <td>緯度</td>
+            <td data-bind="text: basic_info.coord.lat"></td>
+          </tr>
+          <tr>
+            <td>経度</td>
+            <td data-bind="text: basic_info.coord.lon"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div data-bind="visible: selectedStop">
+    <h3>系統情報の表示</h3>
+    <div class="form-group">
+      <label>曜日を選択</label>
+      <select class="form-control" data-bind="options: dayType, optionsText: 'name', value:selectedDay">
+      </select>
     </div>
     <div class="form-group" data-bind="visible: selectedDay">
-    <label>系統を選択</label>
-    <select class="form-control" data-bind="options: lines, optionsText: 'name', value:selectedLine"></select>
+      <label>系統を選択</label>
+      <select class="form-control" data-bind="options: lines, optionsText: 'name', value:selectedLine">
+      </select>
     </div>
-<div data-bind="visible: services">
-    <table class="table">
-    <thead><tr><td>項目名</td><td>データ</td></tr></thead>
-    <tbody><tr><td>系統名</td><td data-bind="text:selectedLine() && selectedLine().name"></td></tr>
-    <tr><td>系統番号</td><td data-bind="text:selectedLine() && selectedLine().number"></td></tr>
-    <tr><td>系統ID</td><td data-bind="text:selectedLine() && selectedLine().id"></td></tr>
-    <tr><td>運行日</td><td data-bind="text: selectedDay().name"></td></tr>
-    <tr><td>発時刻</td><td><table class="table">
-    <thead><tr><td>時刻</td><td>便ID</td></tr></thead>
-    <tbody data-bind="foreach: services"><tr><td data-bind="text:dept">系統名</td><td data-bind="text:bus_id"></td></tr></tbody></table></td></tr>
-    </tbody>
-    </table>
-</div>
-</div>
-<div data-bind="visible: selectedLine">
-<h3>便情報の表示</h3>
-	<div class="form-group">
-    <label>便を選択</label>
-    <select class="form-control" data-bind="options: services, optionsText: 'dept', value:selectedService"></select>
+    <div data-bind="visible: services">
+      <table class="table">
+        <thead>
+          <tr>
+            <td>項目名</td>
+            <td>データ</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>系統名</td>
+            <td data-bind="text:selectedLine() && selectedLine().name"></td>
+          </tr>
+          <tr>
+            <td>系統番号</td>
+            <td data-bind="text:selectedLine() && selectedLine().number"></td>
+          </tr>
+          <tr>
+            <td>系統ID</td>
+            <td data-bind="text:selectedLine() && selectedLine().id"></td>
+          </tr>
+          <tr>
+            <td>運行日</td>
+            <td data-bind="text: selectedDay().name"></td>
+          </tr>
+          <tr>
+            <td>発時刻</td>
+            <td><table class="table">
+                <thead>
+                  <tr>
+                    <td>時刻</td>
+                    <td>便ID</td>
+                  </tr>
+                </thead>
+                <tbody data-bind="foreach: services">
+                  <tr>
+                    <td data-bind="text:dept">系統名</td>
+                    <td data-bind="text:bus_id"></td>
+                  </tr>
+                </tbody>
+              </table></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-<div data-bind="visible: serviceInfo, with: serviceInfo">
-    <table class="table">
-    <thead><tr><td>駅ID</td><td>発時刻</td></tr></thead>
-    <tbody data-bind="foreach: dept_times"><tr><td data-bind="text:station.name">系統名</td><td data-bind="text:dept"></td></tr>
-    </tbody>
-    </table>
-</div>
-</div>
+  </div>
+  <div data-bind="visible: selectedLine">
+    <h3>便情報の表示</h3>
+    <div class="form-group">
+      <label>便を選択</label>
+      <select class="form-control" data-bind="options: services, optionsText: 'dept', value:selectedService">
+      </select>
+    </div>
+    <div data-bind="visible: serviceInfo, with: serviceInfo">
+      <table class="table">
+        <thead>
+          <tr>
+            <td>駅ID</td>
+            <td>発時刻</td>
+          </tr>
+        </thead>
+        <tbody data-bind="foreach: dept_times">
+          <tr>
+            <td data-bind="text:station.name">系統名</td>
+            <td data-bind="text:dept"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-1.11.2.min.js"></script>
+<script src="js/jquery-1.11.2.min.js"></script> 
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/bootstrap.js"></script>
+<script src="js/bootstrap.js"></script> 
 
-<!-- Knockout.js -->
-<script src="js/knockout-3.3.0.js"></script>
+<!-- Knockout.js --> 
+<script src="js/knockout-3.3.0.js"></script> 
 
-<!-- ViewModel -->
+<!-- ViewModel --> 
 <script src="js/viewmodel.js"></script>
 </body>
 </html>
