Added reference to SendaiCityBusAPI(http://bus.aobayama.net/).

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
       </table>
     </div>
   </div>
+  <hr>
+  <div>
+  	<p>このサイトは<a href="http://bus.aobayama.net/">仙台市営バスAPI</a>を用いて制作されています</p>
+  </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
