Add welcome page.

--- a/route/index.html
+++ b/route/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>停留所情報の検索</title>
+  <title>ルート検索サンプル</title>
 
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
@@ -190,7 +190,7 @@
                             <tr>
                               <td data-bind="text: dept.time"></td>
                               <td data-bind="text: dept.station.name"></td>
-                              <td rowspan="2" class="multi-row" data-bind="text: line_id"></td>
+                              <td rowspan="2" class="multi-row" data-bind="text: line.name"></td>
                               <td rowspan="2" class="multi-row" data-bind="text: bus_id"></td>
                               <td rowspan="2" class="multi-row" data-bind="text: time"></td>
                             </tr>
