Fix button size.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="jumbotron">
             <h1>仙台市営バスAPI サンプル集</h1>
             <p class="lead">仙台市営バスAPIを利用したサンプルアプリケーションを公開しています。</p>
-            <p><a href="http://bus.aobayama.net/" target="_blank">APIはこちら</a></p>
+            <p><a class="btn btn-default btn-lg" href="http://bus.aobayama.net/" target="_blank">APIはこちら</a></p>
         </div>
         <div class="row">
             <div class="col-md-4">
