--- a/explorer/index.html
+++ b/explorer/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 <div class="container">
+  <p><a class="btn btn-default" href="simple.html">簡易版はこちら</a></p>
   <div>
     <h3>停留所の検索</h3>
     <div class="form-group">
